Fixed 'flickering' on page load. It was caused be the images being rotated and positioned after the page loads.

--- a/gallery/index.css
+++ b/gallery/index.css
@@ -54,6 +54,7 @@ body {
 }
 
 .polaroid {
+	opacity: 0;
 	margin: 20px 10px 10px 30px;
 	display: inline-block;
 	height: 370px;
